[package]
name = "hydrazine"
version = "0.1.0"
authors = ["Marcel Müller <neikos@neikos.email>"]
documentation = "https://docs.rs/hydrazine/"
description = "An opinionated admin interface for Rocket with Diesel."
repository = "https://github.com/TheNeikos/hydrazine"
readme = "./README.md"
keywords = ["rocket", "diesel", "admin-page"]
categories = ["web-programming"]
license = "MIT"

[badges]
travis-ci = { repository = "TheNeikos/hydrazine", branch = "master" }
maintenance = { statuc = "actively-developed" }

[dependencies]
