[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
categories = ["web-programming"]
description = "An opinionated admin interface for Rocket with Diesel."
documentation = "https://docs.rs/hydrazine/"
keywords = ["rocket", "diesel", "admin-page"]
license = "MIT"
name = "hydrazine"
readme = "./README.md"
repository = "https://github.com/TheNeikos/hydrazine"
version = "0.1.0"

[badges]

[badges.maintenance]
status = "actively-developed"

[badges.travis-ci]
branch = "master"
repository = "TheNeikos/hydrazine"

[dependencies]
dotenv = "0.10.1"
error-chain = "0.11.0"
itertools = "0.7.4"

[dependencies.diesel]
features = ["postgres"]
version = "1.0.0-beta1"
